--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-paper-dates",
-  "version": "0.22.43",
+  "name": "@pianofunclub/react-native-paper-dates",
+  "version": "0.22.43-pianofunclub.1",
   "description": "Performant Date Picker for React Native Paper",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
