--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "!**/__mocks__"
   ],
   "scripts": {
-    "test": "jest --config=jest.config.js --watchAll=false",
+    "test": "jest --config=jest.config.js --watchAll=false --passWithNoTests",
     "test-watch": "jest --config=jest.config.js --watchAll",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
